--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,15 @@
 /* Styles globaux */
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
+@import '@ionic/angular/css/core.css';
+@import '@ionic/angular/css/normalize.css';
+@import '@ionic/angular/css/structure.css';
+@import '@ionic/angular/css/typography.css';
+@import '@ionic/angular/css/padding.css';
+@import '@ionic/angular/css/float-elements.css';
+@import '@ionic/angular/css/text-alignment.css';
+@import '@ionic/angular/css/text-transformation.css';
+@import '@ionic/angular/css/flex-utils.css';
+@import '@ionic/angular/css/display.css';
 
 * {
   margin: 0;
@@ -7,11 +17,13 @@
   box-sizing: border-box;
 }
 
-html, body {
+html, body, ion-app {
   height: 100%;
 }
 
-body {
+body,
+ion-app,
+ion-content {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: #f5f5f5;
 }
