--- a/src/app/features/users/users.component.html
+++ b/src/app/features/users/users.component.html
@@ -15,6 +15,7 @@
             <mat-option [value]="null">Tous les rôles</mat-option>
             <mat-option [value]="UserRole.ADMIN">Administrateurs</mat-option>
             <mat-option [value]="UserRole.DOCTOR">Médecins</mat-option>
+            <mat-option [value]="UserRole.NURSE">Infirmiers / Infirmières</mat-option>
             <mat-option [value]="UserRole.PATIENT">Patients</mat-option>
           </mat-select>
         </mat-form-field>
