--- a/src/app/features/appointments/appointments.component.html
+++ b/src/app/features/appointments/appointments.component.html
@@ -92,6 +92,13 @@
         </td>
       </ng-container>
 
+      <ng-container matColumnDef="location">
+        <th mat-header-cell *matHeaderCellDef>Lieu</th>
+        <td mat-cell *matCellDef="let appointment">
+          {{ getLocationLabel(appointment) }}
+        </td>
+      </ng-container>
+
       <ng-container matColumnDef="reason">
         <th mat-header-cell *matHeaderCellDef>Motif</th>
         <td mat-cell *matCellDef="let appointment" [matTooltip]="appointment.reason">
@@ -118,6 +125,11 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let appointment">
+          <button mat-icon-button color="primary"
+                  matTooltip="Voir les détails"
+                  (click)="viewAppointment(appointment)">
+            <mat-icon>visibility</mat-icon>
+          </button>
           <button mat-icon-button color="warn"
                   matTooltip="Annuler ce rendez-vous"
                   (click)="cancelAppointment(appointment.id)"
