--- a/src/app/features/appointments/create-appointment.component.scss
+++ b/src/app/features/appointments/create-appointment.component.scss
@@ -44,6 +44,12 @@ mat-form-field {
   color: #555;
 }
 
+.location-fields {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 16px;
+}
+
 .time-fields {
   display: grid;
   grid-template-columns: 1fr 1fr;
