--- a/src/app/features/mobile/mobile-patient-home.component.html
+++ b/src/app/features/mobile/mobile-patient-home.component.html
@@ -1,4 +1,4 @@
-<ion-page class="mobile-home">
+<div class="mobile-home">
   <ion-header translucent="true">
     <ion-toolbar color="primary" class="main-toolbar">
       <ion-title>{{ greetingMessage }}, {{ patientName }}</ion-title>
@@ -72,4 +72,4 @@
       </ion-item>
     </ion-list>
   </ion-content>
-</ion-page>
+</div>
